# personal_website

./: README.md  README_DEPLOY.md  README_FINAL.md  README_FLASK.md  app.py  env.example  hv_r2.json  hv_r3.json  hv_r4.json  hv_r5.json  hv_r6.json  hv_r7.json  hv_r8.json  index.html  package.json  pyproject.toml  requirements.txt  run_scraper.py  start_flask.py  vercel.json
api/: scrape.js
hkjc_scraper/: __init__.py  __main__.py  constants.py  horse_detail.py  main.py  models.py  racecard.py  selectors.py  utils.py
hkjc_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_example.sh
templates/: index.html
tests/: __init__.py  test_e2e_dryrun.py  test_parsing_unit.py
